# HomeCatalog

./: .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml  ruff.toml
homecatalog/: __init__.py  app.py  models.py
homecatalog/traverse_path/: __init__.py  by_path.py  compare.py  pydantic.py
tests/: test_polls.py
tests/fixtures/: bunnies.xml  poll.xml
